# proprietary_sys

./: BoostFramework.java
aptxacu/: Android.mk  AndroidManifest.xml  aptxacuOverlayCreateProject.sh  aptxacu_system_product.mk
aptxui/: Android.mk  AndroidManifest.xml  aptxui_system_product.mk
ccctimesync/CccDkTimeSync/: Android.bp  LICENSE  NOTICE
ccctimesync/QcDckTimeSyncService/: Android.bp  AndroidManifest.xml  NOTICE
common/: create_files.mk  create_mk.sh  vendorsetup.sh
common/anorak/: BoardConfigVendor.mk
common/apq8098_latv/: BoardConfigVendor.mk
common/bengal/: BoardConfigVendor.mk
common/canoe/: BoardConfigVendor.mk
common/config/: Android.bp  Android.mk  LICENSE  NOTICE  device-vendor-SDM845-pureAOSP.mk  device-vendor-qssi.mk  device-vendor.mk  public.libraries.wearable.txt  sanitizer.mk  sdclang.json
common/crow/: BoardConfigVendor.mk
commonsys-intf/QIIFA-fwk/dev_tests/state_patches/compat_ext/: CMakeLists.txt  here  test.py
commonsys-intf/QIIFA-fwk/dev_tests/state_patches/compat_ext/include/: class1.h
commonsys-intf/QIIFA-fwk/dev_tests/state_patches/compat_ext/source/: class1.cpp
commonsys-intf/QIIFA-fwk/dev_tests/state_patches/platform_schema_unsupported_platform/dev_compat/source/: CMakeLists.txt
commonsys/securemsm/smcinvoke/minksocket/: Android.bp  Makefile.am
commonsys/securemsm/smcinvoke/minksocket/include/: cdefs.h  check.h  heap.h  object.h
commonsys/securemsm/smcinvoke/minksocket/kernel/: ObjectTable.h  bbuf.h  kdefs.h  qlist.h
commonsys/securemsm/smcinvoke/minksocket/sock/: ObjectTableMT.h  ObjectTableMT_test.h  bbuf.c  deadlocktest_q.c  fdwrapper.c  fdwrapper.h  heap_port.h  logging.h  lxcom_sock.h  memscpy.h  minkipc.c  minkipc_q.c  minkmem_q.c  minksocket.c  minksocket.h  msforwarder.c  msforwarder.h  msforwarder_q.c  msobject_q.c  raceconditiontest_q.c  threadpool.c  threadpool.h  threadpool_q.c  threadsafety_q.c
commonsys/securemsm/smcinvoke/minksocket/sock/kernel/: bbuf.c
commonsys/securemsm/smcinvoke/minksocket/sock/sim_port/: simheap.c  simheap.h
interfaces/: Android.bp  current.txt
keystone-config/: config.mk
prebuilt_HY11/: AU_INFO.txt  Android.mk  system_links
(+2170 files in other folders)
